@@ -5,21 +5,25 @@
         "name": "host.example.com"
     },
     "docker": {
+        "container": {
+            "id": "6d01caff41f2f9118c0ced423579d70b6161eec614270e3cbf1b72e2bb40f84e",
+            "name": "gifted_hugle"
+        },
         "healthcheck": {
-            "failingstreak": 0,
-            "status": "healthy",
             "event": {
-              "end_date": "2017-01-09T20:38:13.080472813+01:00",
-              "exit_code": 0,
-              "output": "this is an event output",
-              "start_date": "2017-01-09T20:38:12.999970865+01:00",
-            }
+                "end_date": "2017-01-25T10:58:51.171Z",
+                "exit_code": 0,
+                "output": "",
+                "start_date": "2017-01-25T10:58:51.114Z"
+            },
+            "failingstreak": 0,
+            "status": "healthy"
         }
     },
     "metricset": {
         "host": "/var/run/docker.sock",
         "module": "docker",
-        "name": "container",
+        "name": "healthcheck",
         "rtt": 115
     },
     "type": "metricsets"
